Update plugins/org.jkiss.dbeaver.ext.cubrid/src/org/jkiss/dbeaver/ext/cubrid/edit/CubridUserManager.java
Co-authored-by: ShadelessFox <35821147+ShadelessFox@users.noreply.github.com>